--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="">
   <meta property="og:image" content="">
-  <meta name="twitter:title" content="Campuswelt_C1">
+  <meta name="twitter:title" content="Campuswelt_DE">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-campuswelt.svg" type="image/x-icon">
   <meta name="description" content="Eine Marke der Bildungsakademie Colonia gGmbH
 Bildung für alle mit einem kompetenten Team">
   
   
-  <title>Campuswelt_C1</title>
+  <title>Campuswelt_DE</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
