--- a/index.html
+++ b/index.html
@@ -409,8 +409,10 @@ Bildung für alle mit einem kompetenten Team">
 <div id="custom-html-2"><!-- Type valid HTML here -->
 
 <div>
-<div id="runreview" data-comid="1036" data-customerid="2623438" data-projectid="2623439" data-widgetid="3715273"></div>
-<script src="https://assest.allreview.io/design.js"></script>
+            <div>
+            <div id="runreview" data-comid="xmne-kkle-aaxe-llmi" data-customerid="nsje-xmne-uuhl-nsje-ycxw-nsje-llmi" data-projectid="nsje-xmne-uuhl-llmi-xmne-xmne-ycxw" data-widgetid="nsje-xmne-uuhl-llmi-ycxw-zdjk-llmi"></div>
+            <script asp-location="Footer" src="https://assest.allreview.io/index.js"></script>
+            </div>         
 </div></div>
 
 <section class="accordion001 cid-skBC7UU21u mbr-parallax-background" id="accordion001-e">
