create github pages

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ Bildung für alle mit einem kompetenten Team">
                                     <h1 class="mbr-section-title mbr-bold mbr-black mbr-fonts-style display-2 pb-3 mb-1">Warum CampusWelt Sprachkurse?</h1>
                                     <p class="mbr-text mbr-black mbr-regular mbr-fonts-style display-4 pb-3 mb-1">In der modernen Welt von heute sind gute Sprachkenntnisse in allen Bereichen des Lebens zwingend notwending. Deshalb bieten wir Sprachunterricht für alle Sprachstufen und Berufe an. Für jeden Bereich finden Sie bei uns den passenden Kurs. Unser Team besteht aus qualifizierten, motivierten und erfahrenen Dozentinnen und Dozenten, die ihre Kurse qualitativ und hochwertig gestalten. Unsere Kursangebote haben die Zielsetzung, sich nach den Anforderungen und Erwartungen der KursteilnehmerInnen auszurichten.&nbsp;</p>
                                     <ul class="list mbr-black mbr-regular mbr-fonts-style mbr-text mb-3 display-4">
-                                        <li>Prüfungsvorbereitung</li><li>Nachhilfe</li><li>Weiterbildung in der IT</li>
+                                        <li>Prüfungsvorbereitung</li><li>Telc-Prüfungen</li>
                                     </ul>
                                 </div>
                             </div><div class="carousel-item">
