create github pages

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Bildung für alle mit einem kompetenten Team">
     <div class="row">
       <div class="col-12">
         <div class="content-wrapper align-left">
-          <h3 class="mbr-section-title mbr-black mbr-bold pb-3 mbr-fonts-style display-2">Deutsch­kurs (A1-B1-B2-C1)</h3>
+          <h3 class="mbr-section-title mbr-black mbr-bold pb-3 mbr-fonts-style display-2">Deutschkurse von A1 bis C1&nbsp;</h3>
           <p class="mbr-text mbr-black mbr-semibold mbr-fonts-style display-5 mb-4"><br>Bildung für alle mit einem kompetenten Team<br>Eine junge Institution im Herzen von KÖLN <br>mit jahrzehntelanger Erfahrung<br></p>
           <div class="mbr-section-btn pt-5"><a class="btn btn-lg btn-success display-4" href="https://campuswelt.eu/de/c1-intensivkurs" target="_blank">Kursbeginn: 08.08.2022<br>ca. 8 Wochen, ca. 160 Unterrichtsstunden<br>Mo-Fr, 09:00-12:15 Uhr<br></a></div>
         </div>
@@ -141,8 +141,8 @@ Bildung für alle mit einem kompetenten Team">
                 </div>
                 <div class="col-12 col-lg">
                     <div class="text-box">
-                        <h5 class="mbr-title mbr-fonts-style display-5"><strong>Deutsch­kurs (A1-B1-B2-C1)</strong></h5>
-                        <p class="mbr-text mbr-fonts-style display-7">Ziel des Deutsch A1-B1-B2-C1 Kurses ist es, die bereits erworbenen grundlegenden Kommunikationsfähigkeiten weiter auszubauen.</p>
+                        <h5 class="mbr-title mbr-fonts-style display-5"><strong>Deutschkurse von A1 bis C1&nbsp;</strong></h5>
+                        <p class="mbr-text mbr-fonts-style display-7">Ziel der Deutschkurse von A1 bis C1 ist es, die bereits erworbenen grundlegenden Kommunikationsfähigkeiten weiter auszubauen.</p>
                         <div class="cost">
                             <span class="currentcost mbr-fonts-style pr-2 display-2">€350&nbsp; &nbsp; &nbsp; &nbsp;</span>
                             <span class="oldcost mbr-fonts-style display-2">€500</span>
