create github pages

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@ Bildung für alle mit einem kompetenten Team">
 <div>
 <div>
                         <div id="runreview" data-comid="xmne-kkle-aaxe-llmi" data-customerid="nsje-xmne-uuhl-nsje-ycxw-nsje-llmi" data-projectid="nsje-xmne-uuhl-llmi-xmne-xmne-ycxw" data-widgetid="nsje-xmne-uuhl-llmi-ycxw-zdjk-llmi"></div>
-                        <script asp-location="Footer" src="https://assest.allreview.io/index.js"></script>
+                        <script src="https://assest.allreview.io/runreview.js"></script>
                         </div>                          
 </div></div>
 
