create github pages

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Bildung für alle mit einem kompetenten Team">
         <div class="content-wrapper align-left">
           <h3 class="mbr-section-title mbr-black mbr-bold pb-3 mbr-fonts-style display-2">Deutschkurse von A1 bis C1&nbsp;</h3>
           <p class="mbr-text mbr-black mbr-semibold mbr-fonts-style display-5 mb-4"><br>Bildung für alle mit einem kompetenten Team<br>Eine junge Institution im Herzen von KÖLN <br>mit jahrzehntelanger Erfahrung<br></p>
-          <div class="mbr-section-btn pt-5"><a class="btn btn-lg btn-success display-4" href="https://campuswelt.eu/de/c1-intensivkurs" target="_blank">Kursbeginn: 08.08.2022<br>ca. 8 Wochen, ca. 160 Unterrichtsstunden<br>Mo-Fr, 09:00-12:15 Uhr<br></a></div>
+          <div class="mbr-section-btn pt-5"><a class="btn btn-lg btn-success display-4" href="https://campuswelt.eu/de/c1-intensivkurs" target="_blank">Kursbeginn: 08.08.2022<br>8 Wochen, 160 Unterrichtsstunden<br>Mo-Fr, 09:00-12:15 Uhr<br></a></div>
         </div>
       </div>
     </div>
