--- a/index.html
+++ b/index.html
@@ -385,10 +385,10 @@ Bildung für alle mit einem kompetenten Team">
 <div id="custom-html-2"><!-- Type valid HTML here -->
 
 <div>
-<div>
-                        <div id="runreview" data-comid="xmne-kkle-aaxe-llmi" data-customerid="nsje-xmne-uuhl-nsje-ycxw-nsje-llmi" data-projectid="nsje-xmne-uuhl-llmi-xmne-xmne-ycxw" data-widgetid="nsje-xmne-uuhl-llmi-ycxw-zdjk-llmi"></div>
+                        <div>
+                        <div id="runreview" data-comid="xmne-kkle-aaxe-llmi" data-customerid="nsje-xmne-uuhl-nsje-ycxw-nsje-llmi" data-projectid="nsje-xmne-uuhl-llmi-xmne-xmne-ycxw" data-widgetid="kkle"></div>
                         <script src="https://assest.allreview.io/runreview.js"></script>
-                        </div>                          
+                        </div>                                             
 </div></div>
 
 <section class="accordion001 cid-skBC7UU21u mbr-parallax-background" id="accordion001-e">
