create github pages

--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@ Bildung für alle mit einem kompetenten Team">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MLSD6WD');</script>
+<!-- End Google Tag Manager -->
   
 
 <meta name="theme-color" content="#ffc658">
@@ -51,7 +57,10 @@ Bildung für alle mit einem kompetenten Team">
 <meta name="apple-mobile-web-app-title" content="Campuswelt">
 <link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
 <body>
-  
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MLSD6WD"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <section class="menu menu01 cid-skBcpp7fXt" once="menu" id="menu01-0">
     
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
