create github pages

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MLSD6WD');</script>
 <!-- End Google Tag Manager -->
-  
+  <script defer data-domain="de.campuswelt.eu" src="https://plausible.io/js/plausible.js"></script>
 
 <meta name="theme-color" content="#ffc658">
 <link rel="manifest" href="manifest.json">
