--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ Bildung für alle mit einem kompetenten Team">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
@@ -577,7 +578,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row flex-column-reverse">
             <div class="map-wrapper col-12 col-lg-12">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" allowfullscreen="" loading="lazy" class="lazyload" data-src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Venloer Str. 379, 50825 Köln"></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" allowfullscreen="" loading="lazy" class="lazyload" data-src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Venloer Str. 379, 50825 Köln"></iframe></div>
             </div>
             <div class="col-12 col-lg-12">
                 <div class="row justify-content-center">
@@ -655,6 +656,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/chatbutton/floating-wpp.js"></script>
   <script src="assets/chatbutton/script.js"></script>
@@ -673,7 +676,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   
   
   
-<div id="chatbutton-wa" data-phone="+49 176 55438011" data-headertitle="👋 Chatten Sie mit uns auf WhatsApp!" data-popupmessage="Hallo!👋
+<input name="cookieData" type="hidden" data-cookie-customdialogselector="null" data-cookie-colortext="#424a4d" data-cookie-colorbg="rgba(234, 239, 241, 0.99)" data-cookie-textbutton="Zustimmen" data-cookie-colorbutton="#39b54a" data-cookie-colorlink="#424a4d" data-cookie-underlinelink="true" data-cookie-text="Wir verwenden Cookies, um Ihnen das beste Erlebnis zu bieten. Lesen Sie unser <a href='privacy.html'>Cookie</a>.">
+  <div id="chatbutton-wa" data-phone="+49 176 55438011" data-headertitle="👋 Chatten Sie mit uns auf WhatsApp!" data-popupmessage="Hallo!👋
 
 Geben Sie hier eine Nachricht ein. Es geht direkt an unser Telefon! 🔥
 
