--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MLSD6WD');</script>
 <!-- End Google Tag Manager -->
+
+
+    
+<script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+<script>
+    Weglot.initialize({
+        api_key: 'wg_28bf87c592c148ac593b9801503a53ae8'
+    });
+</script>
   <script defer data-domain="de.campuswelt.eu" src="https://plausible.io/js/plausible.js"></script>
 
 <meta name="theme-color" content="#ffc658">
@@ -576,7 +585,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="row flex-column-reverse">
             <div class="map-wrapper col-12 col-lg-12">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" allowfullscreen="" loading="lazy" class="lazyload" data-src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=Venloer Str. 379, 50825 Köln"></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" allowfullscreen="" loading="lazy" class="lazyload" data-src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDk89J4FSunMF33ruMVWJaJht_Ro0kvoXs&amp;q=Venloer Str. 379, 50825 Köln"></iframe></div>
             </div>
             <div class="col-12 col-lg-12">
                 <div class="row justify-content-center">
